--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <!-- section two by Innocent Chukwuemeka and MacNelson -->
         <div class="two">
-            <div class="what">
+            <div class="two_what">
                 <h2>What's different about manage?</h2>
                 <p>Manage provides all functionality your team need, without complexity. Our software is tailor-made for modern digital product team.</p>
             </div>
